--- a/ShoesApi/appsettings.json
+++ b/ShoesApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+   "ConnectionStrings": {
+      "ShoesDb": "Host=localhost;Port=1111;Database=1111;Username=postgres;Password=1111"
+   }
 }
