Get Brands Destinations Seasons

--- a/ShoesApi/ShoesApi.csproj
+++ b/ShoesApi/ShoesApi.csproj
@@ -24,4 +24,8 @@
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.18" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Requests\BrandRequests\" />
+  </ItemGroup>
+
 </Project>
