--- a/ShoesApi/appsettings.json
+++ b/ShoesApi/appsettings.json
@@ -1,12 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
-   "ConnectionStrings": {
-      "ShoesDb": "Host=localhost;Port=1111;Database=1111;Username=postgres;Password=1111"
-   }
+	"AppSettings": {
+		"Token": "my top secret key"
+	},
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft.AspNetCore": "Warning"
+		}
+	},
+	"AllowedHosts": "*",
+	"ConnectionStrings": {
+		"ShoesDb": "Host=localhost;Port=1111;Database=1111;Username=postgres;Password=1111"
+	}
 }
