#5 Реализовал хранилище файлов minio

--- a/ShoesApi/appsettings.json
+++ b/ShoesApi/appsettings.json
@@ -10,6 +10,7 @@
 	},
 	"AllowedHosts": "*",
 	"ConnectionStrings": {
-		"ShoesDb": "Host=localhost;Port=1111;Database=1111;Username=postgres;Password=1111"
+		"ShoesDb": "Host=localhost;Port=1111;Database=1111;Username=postgres;Password=1111",
+		"S3": "s3://accessKey:secretKey@localhost:9000"
 	}
 }
