--- a/ShoesApi.IntegrationTests/ShoesApi.IntegrationTests.csproj
+++ b/ShoesApi.IntegrationTests/ShoesApi.IntegrationTests.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="NSubstitute" Version="5.0.0" />
     <PackageReference Include="Respawn" Version="6.0.0" />
     <PackageReference Include="Testcontainers" Version="3.0.0" />
+    <PackageReference Include="Testcontainers.Minio" Version="3.0.0" />
     <PackageReference Include="Testcontainers.PostgreSql" Version="3.0.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
