--- a/src/ShoesApi.Infrastructure/ShoesApi.Infrastructure.csproj
+++ b/src/ShoesApi.Infrastructure/ShoesApi.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -20,8 +20,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Minio" Version="4.0.7" />
-    <PackageReference Include="Minio.AspNetCore" Version="4.0.8" />
+    <PackageReference Include="Minio" Version="5.0.0" />
+    <PackageReference Include="Minio.AspNetCore" Version="5.0.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.4" />
   </ItemGroup>
 
