--- a/tests/ShoesApi.IntegrationTests/ShoesApi.IntegrationTests.csproj
+++ b/tests/ShoesApi.IntegrationTests/ShoesApi.IntegrationTests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -12,8 +12,8 @@
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
-    <PackageReference Include="Minio" Version="4.0.7" />
-    <PackageReference Include="Minio.AspNetCore" Version="4.0.8" />
+    <PackageReference Include="Minio" Version="5.0.0" />
+    <PackageReference Include="Minio.AspNetCore" Version="5.0.0" />
     <PackageReference Include="NSubstitute" Version="5.0.0" />
     <PackageReference Include="Respawn" Version="6.0.0" />
     <PackageReference Include="Testcontainers" Version="3.0.0" />
